# agentspec

./: .coverage  .env.example  .flake8  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  README.md  opencode.json  pyproject.toml  pyrightconfig.json  spec-schema.json
.githooks/: pre-push
.github/: repo.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/eval-spec/: action.yml  post_comment.py
.github/workflows/: ci.yml  eval-on-pr.yml
.opencode/agents/: code-reviewer.md  doc-writer.md  mcp-scaffolder.md  spec-writer.md  test-writer.md
.opencode/skills/add-eval-spec/: SKILL.md
.super-agents/: strategic-wombat-34.output
agentspec/: __init__.py  assertions.py  cli.py  reporter.py  results_backend.py  runner.py  scorer.py  spec.py
agentspec/adapters/: __init__.py  anthropic_adapter.py  base.py  caching_adapter.py  langchain_adapter.py  ollama_adapter.py  openai_compatible_adapter.py
agentspec/mcp/: __init__.py  eval_runner.py  mock_agent.py  protocol.py  results_store.py  spec_manager.py  spec_templates.py  tests_runner.py
docs/: architecture.md  assertion-types.md  cli-reference.md  contributing.md  faq.md  index.md  mcp-servers.md  roadmap.md
examples/: tool-calling.yaml
scripts/: pre-push-check.sh
tests/: test_anthropic_adapter.py  test_anthropic_coverage.py  test_assertions.py  test_caching_adapter.py  test_cli.py  test_cli_extras.py  test_fixtures.py  test_html_reporter.py  test_langchain_adapter.py  test_ollama_adapter.py  test_openai_adapter.py  test_reporter.py  test_results_backend.py  test_runner.py  test_spec.py  test_tier5_cli.py
tests/fixtures/: include-shared.yaml  sample.yaml
tests/mcp/: test_eval_runner.py  test_mock_agent.py  test_protocol.py  test_results_store.py  test_results_store_prune.py  test_spec_manager.py  test_spec_templates.py  test_tests_runner.py
(+6 files in other folders)
