[project]
name = "agentspec"
version = "0.1.0"
description = "Spec-driven evaluation framework for AI agents"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "click>=8.0",
    "openai>=1.0",
    "jsonschema>=4.0",
]

[project.scripts]
agentspec = "agentspec.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
langchain = [
    "langchain-core>=0.3",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["opencode.json"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
